# bilibili-video-maker

./: .gitignore  CHANGELOG.md  README.md  SCHEDULER_README.md  TROUBLESHOOTING_403.md  check_video_info.py  example_usage.py  install.sh  main.py  pyproject.toml  test_cover_generation.py  test_credentials.py  test_title_generation.py  项目prd.md
docs/: MODE_USAGE.md
src/content-acquisition/: __init__.py
src/content_acquisition/: __init__.py  acquirer.py
src/new_mode/: __init__.py  content_fetcher.py  publish_video.py  runner.py  video_maker.py
src/schedule/: __init__.py  cron_scheduler.py  game_fetcher.py  models.py  scheduler.py  task_store.py
src/utils/: __init__.py  cookie_reader.py  llm_client.py  video_processor.py
src/vide-publish/: __init__.py
src/vide_publish/: __init__.py  publisher.py
src/video-maker/: __init__.py
src/video_maker/: __init__.py  maker.py
test/: check_today_games.py  test_cookie_reader.py  test_cron_schedule.py  test_rating_filter.py  test_scheduler.py  test_title_generation.py  test_video_upload.py
